deploy/k8s/platform/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubeclass-web
spec:
  selector:
    app: kubeclass-web
  ports:
    - port: 80
      targetPort: 3000
